--- a/flex.html
+++ b/flex.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
+    <style>
+        .container{
+            display: flex;
+            gap:20px;
+        }
+        .box{
+            background-color: blue;
+            padding:20px;
+            border-radius: 10px;
+        }
+        .container2{
+            display: flex;
+            gap:10px;
+            flex-wrap: wrap;
+        }
+        .item{
+            width:200px;
+            height:100px;
+            background-color: brown;
+            border:2px solid tomato;
+        }
+        @media screen and (max-width:576px){
+            .container{
+                flex-direction: column;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Flexi bole</h1>
+    <h1>Flexibole Flex</h1>
     <div class="container">
       <div class="box">
         <h3>First Box</h3>
@@ -16,6 +43,18 @@
         <h3>Seconde Box</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic veniam natus, aut temporibus, velit placeat sint cupiditate earum architecto eveniet atque corrupti! Suscipit officiis nobis rerum atque sed. Nihil molestiae adipisci labore. Esse, ipsa! Commodi illo ullam ea neque a.</p>
       </div>
+    </div>
+    <div class="container2">
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
+        <div class="item">item - 1</div>
     </div>
 </body>
 </html>
