--- a/collage.html
+++ b/collage.html
@@ -29,6 +29,20 @@
             grid-template-columns: repeat(2,1fr);
             gap:5px;
         }
+        @media screen and (max-width:576px){
+            .row{
+                flex-direction: column;
+                height: auto;
+            }
+            .squr-collage{
+                grid-template-columns: 1fr;
+            }
+        }
+        @media screen and (min-width:576px) and (max-width:992px){
+            .row{
+                flex-direction: column;
+                height: auto;
+        }
     </style>
 </head>
 <body>
